# gpt2_finetuning

./: .gitignore  README.md  pyproject.toml
eda/: analyze_fulldataset.py
eda/stats/: analysis_results_full.txt  analysis_results_test.txt  analysis_results_train.txt  sampling_stats.txt
samples/: test_dataset.parquet  train_dataset.parquet
task_one/: run_instructions.py
task_one/evaluation/: evaluate_responses.py
task_two/finetuning/: evaluate_responses.py  finetune.py
task_two/finetuning/checkpoints/checkpoint-3/: adapter_model.safetensors  scheduler.pt
task_two/finetuning/checkpoints/final_model/: README.md
