[project]
name = "gpt2-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "nltk>=3.9.1",
    "peft>=0.15.1",
    "rouge>=1.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.2",
    "textstat>=0.7.5",
    "torch>=2.6.0",
    "transformers>=4.51.1",
]
